--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
 
   <!-- <img src="/img/Dashboard-Large-(Light).png"> -->
 
-  <p class="text-white text-5xl text-left font-bold">
+  <p class="text-white text-5xl text-center font-bold">
     Build your form by Drag & Drop, then put this one line code in your Frontend
   </p>
 
