--- a/public/index.html
+++ b/public/index.html
@@ -77,27 +77,109 @@
 
   <!-- END NAVBAR -->
 
-  <h1 class="text-white text-8xl font-extrabold text-center mt-[92px]">
+  <h1
+    class="font-extrabold text-center mt-[92px] text-[96px] bg-gradient-to-r from-pink-300 to-indigo-500 text-transparent bg-clip-text">
     Not just form builder.
   </h1>
   <h2 class="text-white text-[64px] text-center font-extrabold mb-7">
     Build natively for React & React Native.
   </h2>
-  <p class="text-white text-center font-normal mb-11 justify-center">
+  <p class="text-white text-center text-2xl mb-11 justify-center font-normal">
     LezzForm is not just a “form-builder”. Build your form by drag and drop,
-    then generate it natively into React, NextJs, and React Native!
+    then
+    <br>
+    generate it natively into React, NextJs, and React Native!
   </p>
 
-  <div class="mb-7 text-center">
+  <div class="mb-24 text-center">
     <a href="#" class="bg-[#6366F0] text-white rounded-full px-11 py-4 text-base font-medium">Book a Demo</a>
   </div>
 
-  <!-- <img src="/img/Dashboard-Large-(Light).png"> -->
+  <img class="mx-auto mb-40" src="/img/Dashboard-Large-(Light).svg">
+  
+  <!-- OLD -->
+  <!-- <div class="w-[1488px] h-[473.60px] mb-10">
+    <div class="m-32 mb-8">
+      <p class="text-white text-5xl text-left font-bold">
+        Build your form by
+        <br>
+        <span class="bg-gradient-to-r from-pink-300 to-indigo-500 text-transparent bg-clip-text">Drag &
+          Drop</span>, then put
+        <br>
+        this <span class=" bg-gradient-to-r from-pink-300 to bg-indigo-500 text-transparent bg-clip-text">one
+          line code</span> in
+        <br>
+        your Frontend
+      </p>
+    </div>
 
-  <p class="text-white text-5xl text-center font-bold">
-    Build your form by Drag & Drop, then put this one line code in your Frontend
-  </p>
+    <div class="mb-24 text-left bg-[#181920] border-l-8 border-orange-600 rounded-lg ml-32 w-[512px]">
+      <p class=" text-white pl-8 py-2.5 text-2xl font-normal font-['SF Mono']">Form</p>
+    </div>
+  </div> -->
 
+  <!-- NEW -->
+  <section class="text-white body-font mx-[120px]">
+    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+      <div
+        class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
+        <h1 class="title-font sm:text-5xl mb-8 font-bold">Build your form by
+          <br class="hidden lg:inline-block"><span
+            class="bg-gradient-to-r from-pink-300 to-indigo-500 text-transparent bg-clip-text">Drag & Drop</span>, then
+          put
+          <br class="hidden lg:inline-block">this<span
+            class="bg-gradient-to-r from-pink-300 to-indigo-500 text-transparent bg-clip-text"> one line code</span> in
+          <br class="hidden lg:inline-block">your Frontend
+        </h1>
+        <div class="flex justify-center">
+          <p
+            class="inline-flex bg-[#181920] border-l-8 border-orange-600 py-2 pl-8 pr-[341px] focus:outline-none rounded-lg text-2xl">
+            Form</p>
+        </div>
+
+      </div>
+      <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+        <img class="object-cover object-center rounded" alt="" src="/img/Hero.png">
+      </div>
+    </div>
+  </section>
+
+  <h2 class="text-white text-5xl text-center font-bold mb-[60px]">
+    Build natively for your favorite
+    <br>
+    frontend stack
+  </h2>
+
+  <div class="flex justify-evenly text-white mb-44">
+    <img src="/img/js-logos.svg" alt="">
+    <img src="/img/react-logos.svg" alt="">
+    <img src="/img/next-logos.svg" alt="">
+    <img src="/img/vue-logos.svg" alt="">
+    <img src="/img/angular-logos.svg" alt="">
+    <img src="/img/flutter-logos.svg" alt="">
+  </div>
+
+  <!-- <div class="object-contain w-auto mx-auto h-14"></div> -->
+
+  <!-- FOOTER -->
+  <footer class="bg-white shadow dark:bg-zinc-900">
+    <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
+      <span class="text-gray-300 rounded-md px-3 py-2 text-sm font-medium">Copyright ©2024 lezzform.com
+      </span>
+      <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-gray-500 dark:text-gray-400 sm:mt-0">
+        <li>
+          <a href="#"
+            class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Book a
+            Demo</a>
+        </li>
+        <li>
+          <a href="#"
+            class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Sign
+            In</a>
+        </li>
+      </ul>
+    </div>
+  </footer>
 
 </body>
 
