--- a/public/index.html
+++ b/public/index.html
@@ -48,18 +48,6 @@
           <div class="flex flex-shrink-0 items-center" style="margin-left: 10px">
             <img class="h-8 w-auto" src="/img/lezzform.svg" alt="Your Company" />
           </div>
-
-          <!-- BUTTON -->
-          <!-- <div class="hidden sm:ml-6 sm:block">
-              <div class="flex space-x-4">
-                <a
-                  href="#"
-                  class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
-                  >Team</a
-                >
-              </div>
-            </div> -->
-          <!-- END BUTTON -->
         </div>
         <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
           <div class="hidden sm:ml-6 sm:block">
@@ -96,30 +84,8 @@
   </div>
 
   <img class="mx-auto mb-40" src="/img/Dashboard-Large-(Light).svg">
-  
-  <!-- OLD -->
-  <!-- <div class="w-[1488px] h-[473.60px] mb-10">
-    <div class="m-32 mb-8">
-      <p class="text-white text-5xl text-left font-bold">
-        Build your form by
-        <br>
-        <span class="bg-gradient-to-r from-pink-300 to-indigo-500 text-transparent bg-clip-text">Drag &
-          Drop</span>, then put
-        <br>
-        this <span class=" bg-gradient-to-r from-pink-300 to bg-indigo-500 text-transparent bg-clip-text">one
-          line code</span> in
-        <br>
-        your Frontend
-      </p>
-    </div>
 
-    <div class="mb-24 text-left bg-[#181920] border-l-8 border-orange-600 rounded-lg ml-32 w-[512px]">
-      <p class=" text-white pl-8 py-2.5 text-2xl font-normal font-['SF Mono']">Form</p>
-    </div>
-  </div> -->
-
-  <!-- NEW -->
-  <section class="text-white body-font mx-[120px]">
+  <section class="text-white body-font mx-[120px] mb-40">
     <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
       <div
         class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
